# memo

./: README.md
app/Ubersicht/hcal.widget/: index.js
app/sogou/: 书写优雅.mssf
app/xshell/: dracula.xcs
code/: .gitignore
code/api/cpp/: CMakeLists.txt  (+1 more)
code/snippet/: bash.sh  chimerax.sh  flask.py  git.sh  hdf5.py  imagemagick.sh  imagemagick_ffmpeg.sh  latex.tex  math.md  python.py  pytorch.py  system.sh  tool.sh  watcher.py  website.html
code/startup/cpp/viewer/: CMakeLists.txt
code/startup/cpp/viewer/include/viewer/: viewer.h
code/startup/cpp/viewer/src/: main.cpp  viewer.cpp
command/: port-forward.sh
custom/: .localrc  README.md
dev-tool/: README.md  install-ubuntu.sh
docker/alpine-glibc/: Dockerfile
docker/alpine-miniconda2/: Dockerfile
docker/python/: Dockerfile  README.md  requirements.txt
dotfiles/: .localrc  README.md
scripts/: attack.sh  docker.sh  frp.sh  hiwifi.sh  https.sh  ilovegfw.sh  mirrors.sh  openwrt.sh  port-forward.sh  preapare_dl.sh  prepare_dl.sh  proxy.sh  ss.sh  ssh.sh  tool.sh  x11.sh
scripts/centos/: install-cuda.sh  install-discourse.sh  install-gcc.sh  install-tmux.sh  install-vm.sh  install.sh  install_horovod.sh  issues.sh  prepare-dl.sh  prepare_dl.sh
scripts/mac/: install.sh
scripts/raspberrypi/: setup.sh
scripts/ubuntu/: build_opencv.sh  install-tmux.sh  install-webdav.sh  install.sh  install_discourse.sh  install_horovod.sh  install_overleaf.sh  install_remotely.sh  install_tmux_x.sh
scripts/windows/: bootable_usb.sh  install.sh  retroarch.md
workbench/: .localrc  install-mac.sh  install-ubuntu.sh
(+14 files in other folders)
